--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,5 @@
-before_install:
-  - pwd
-  - export CURWD=`pwd`
-  - cd
-  - sudo apt-get install libproj-dev
-  - wget http://download.osgeo.org/gdal/2.0.1/gdal-2.0.1.tar.gz
-  - tar zxf gdal-2.0.1.tar.gz
-  - cd gdal-2.0.1
-  - ./configure
-  - make
-  - sudo make install
-  - cd $CURWD
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
-warnings_are_errors: false
-sudo: required
+language: R
+sudo: false
+cache: packages
