--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+before_install:
+  - pwd
+  - export CURWD=`pwd`
+  - cd
+  - sudo apt-get install libproj-dev
+  - wget http://download.osgeo.org/gdal/2.0.1/gdal-2.0.1.tar.gz
+  - tar zxf gdal-2.0.1.tar.gz
+  - cd gdal-2.0.1
+  - ./configure
+  - make
+  - sudo make install
+  - cd $CURWD
 
-language: R
-sudo: false
-cache: packages
+language: r
+sudo: required
+
+warnings_are_errors: false
