--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - wget http://download.osgeo.org/gdal/2.1.0/gdal-2.1.0.tar.gz
   - tar zxf gdal-2.1.0.tar.gz
   - cd gdal-2.1.0
-  - ./configure --prefix=/usr
+  - ./configure --prefix=/usr --with-threads --with-ogr --with-geos --without-libtool --with-libz=internal --with-libtiff=internal --with-geotiff=internal --without-gif --without-pg --without-grass --without-libgrass --without-cfitsio --without-pcraster --without-netcdf --without-png --without-jpeg --without-gif --without-ogdi --without-fme --without-hdf4 --without-hdf5 --without-jasper --without-ecw --without-kakadu --without-mrsid --without-jp2mrsid --without-bsb --without-grib --without-mysql --without-ingres --without-xerces --without-expat --without-odbc --without-curl --without-sqlite3 --without-dwgdirect --without-panorama --without-idb --without-sde --without-perl --without-php --without-ruby --without-python --without-ogpython --with-hide-internal-symbols
   - make
   - sudo make install
   - cd
