added Mercator example to readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,9 @@ S3method(plot,indicatrix)
 export(indicatrix)
 export(ti_ellipse)
 export(tissot)
+importFrom(grDevices,grey)
+importFrom(grDevices,rgb)
+importFrom(graphics,lines)
+importFrom(graphics,plot)
+importFrom(graphics,polygon)
 importFrom(stats,numericDeriv)
