--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: tissot
 Type: Package
 Title: The Tissot Indicatrix
-Version: 0.0-3.9000
+Version: 0.0.1
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"),
      person("Bill", "Huber", role  = "aut", email = "whuber@quantdec.com"))
 Description: Create and plot the Tissot Indicatrix.
 License: GPL-3
 LazyData: true
 Depends:
-    R (>= 3.1.0)
+    R (>= 4.0.0)
+Imports: PROJ
 Suggests:
-    maptools,
-    rgdal
-RoxygenNote: 5.0.1
+    maptools, rgeos,
+    PROJ, libproj
+RoxygenNote: 7.1.1
