--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,13 @@ Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsu
      person("Bill", "Huber", role  = "aut", email = "whuber@quantdec.com"))
 Description: Create and plot the Tissot Indicatrix.
 License: GPL-3
-LazyData: true
 Depends:
     R (>= 4.0.0)
 Imports: PROJ
 Suggests:
     maptools, rgeos,
-    PROJ, libproj
+    libproj
 RoxygenNote: 7.1.1
+Remotes: hypertidy/PROJ, paleolimbot/libproj
+URL: https://github.com/hypertidy/tissot
+BugReports: https://github.com/hypertidy/tissot/issues
