--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,indicatrix0)
 S3method(plot,indicatrixes)
 export(indicatrix)
+export(indicatrix0)
 export(ti_ellipse)
 export(tissot)
 importFrom(grDevices,grey)
