--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(ti_ellipse)
 export(tissot)
 importFrom(grDevices,grey)
 importFrom(grDevices,rgb)
+importFrom(grDevices,xy.coords)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,polygon)
 importFrom(stats,numericDeriv)
+importFrom(tibble,tibble)
