--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,20 @@
 Package: tissot
 Type: Package
 Title: The Tissot Indicatrix
-Version: 0.0.1
+Version: 0.0.1.9001
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"),
      person("Bill", "Huber", role  = "aut", email = "whuber@quantdec.com"))
 Description: Create and plot the Tissot Indicatrix.
 License: GPL-3
 Depends:
     R (>= 4.0.0)
-Imports: PROJ (> 0.4.0)
+Imports: 
+    tibble,
+    PROJ (> 0.4.0)
 Suggests:
-    maptools, rgeos,
     libproj
 RoxygenNote: 7.1.1
+Encoding: UTF-8
 Remotes: hypertidy/PROJ
 Additional_repositories: https://hypertidy.r-universe.dev
 URL: https://github.com/hypertidy/tissot
