--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(indicatrix)
 export(indicatrix0)
 export(ti_ellipse)
 export(tissot)
+export(tissot_abline)
+export(tissot_get_proj)
+export(tissot_map)
 importFrom(grDevices,grey)
 importFrom(grDevices,rgb)
 importFrom(grDevices,xy.coords)
