make check work, bump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(tissot_map)
 importFrom(grDevices,grey)
 importFrom(grDevices,rgb)
 importFrom(grDevices,xy.coords)
+importFrom(graphics,abline)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,polygon)
