--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: The Tissot Indicatrix
 Version: 0.0.1.9005
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"),
-     person("Bill", "Huber", role  = "aut", email = "whuber@quantdec.com"))
+     person("Bill", "Huber", role  = "aut"))
 Description: Create and plot the Tissot Indicatrix.
 License: GPL-3
 Depends:
