--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tissot
 Type: Package
 Title: The Tissot Indicatrix
-Version: 0.0.1.9005
+Version: 0.0.1.9006
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"),
      person("Bill", "Huber", role  = "aut"))
 Description: Create and plot the Tissot Indicatrix.
@@ -10,14 +10,11 @@ Depends:
     R (>= 4.0.0)
 Imports: 
     tibble,
-    PROJ (> 0.4.0)
-Suggests:
-    libproj
-RoxygenNote: 7.1.1
+    reproj (>= 0.6.0)
+RoxygenNote: 7.2.3
 LazyData: true
 LazyDataCompression: xz
 Encoding: UTF-8
-Remotes: hypertidy/PROJ
 Additional_repositories: https://hypertidy.r-universe.dev
 URL: https://github.com/hypertidy/tissot
 BugReports: https://github.com/hypertidy/tissot/issues
