--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,28 @@
 Package: tissot
-Type: Package
-Title: The Tissot Indicatrix
-Version: 0.0.1.9006
-Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"), email = "mdsumner@gmail.com"),
-     person("Bill", "Huber", role  = "aut"))
-Description: Create and plot the Tissot Indicatrix.
-License: GPL-3
-Depends:
-    R (>= 4.0.0)
+Title: Tissot Indicatrix
+Version: 0.0.1.9001
+Authors@R: c(
+    person("Michael", "Sumner", email = "mdsumner@gmail.com", role = c("aut", "cre"), 
+           comment = c(ORCID = "0000-0002-2471-7511")),
+    person("Bill", "Huber", role = "aut", 
+           comment = "original algorithm and calculations")
+  )
+Description: Attempt to formalize the Tissot indicatrix calculations 
+    shared by Bill Huber on Stack Exchange 
+    (<https://gis.stackexchange.com/a/5075/482>). Attempt to translate and 
+    automate the computation for any projection with a given set of longitude 
+    latitude locations. The indicatrix characterizes map projection distortion 
+    by computing scale factors, angular deformation, and convergence at each 
+    point.
+License: MIT + file LICENSE
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
+Depends: 
+    R (>= 2.10)
 Imports: 
     tibble,
-    reproj (>= 0.6.0)
-RoxygenNote: 7.2.3
-LazyData: true
-LazyDataCompression: xz
-Encoding: UTF-8
-Additional_repositories: https://hypertidy.r-universe.dev
-URL: https://github.com/hypertidy/tissot, https://hypertidy.github.io/tissot/
+    gdalraster
+URL: https://github.com/hypertidy/tissot
 BugReports: https://github.com/hypertidy/tissot/issues
