--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,14 +7,12 @@ Authors@R: c(
     person("Bill", "Huber", role = "aut", 
            comment = "original algorithm and calculations")
   )
-Description: Compute and visualize the Tissot indicatrix for map projections. 
+Description: Compute and visualize the 'Tissot Indicatrix' for map projections. 
     The indicatrix characterizes projection distortion by computing scale 
     factors, angular deformation, areal distortion, and convergence at 
     arbitrary points. Based on the calculations shared by Bill Huber on 
-    Stack Exchange (<https://gis.stackexchange.com/a/5075/482>). Uses 
-    GDAL (via 'gdalraster') for coordinate transformation and supports any 
-    projection that GDAL/PROJ can handle. The Tissot Indicatrix is developed using the method
-    described by as described in the manual by John P. Snyder (1987)  <doi:10.3133/pp1395>. 
+    <https://gis.stackexchange.com/a/5075/482>. Uses 'GDAL' for coordinate transformation. 
+    Developed using the method published in Snyder, JP (1987)  <doi:10.3133/pp1395>. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
