rename scale dots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(tissot_abline)
 export(tissot_get_proj)
 export(tissot_map)
 export(tissot_set_proj)
+export(tissot_unproject)
 importFrom(gdalraster,transform_xy)
 importFrom(grDevices,adjustcolor)
 importFrom(grDevices,hcl.colors)
